[gd_scene load_steps=8 format=2]

[ext_resource path="res://Shared/tileset.svg" type="Texture" id=1]
[ext_resource path="res://Systems/Power/PowerSource.gd" type="Script" id=2]
[ext_resource path="res://Systems/Power/PowerReceiver.gd" type="Script" id=3]
[ext_resource path="res://Entities/Entities/BatteryEntity/BatteryEntity.gd" type="Script" id=4]
[ext_resource path="res://Shared/battery_indicator.png" type="Texture" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float amount : hint_range(0, 1) = 0.0;

void fragment() {
	vec4 mask = texture(TEXTURE, UV);
	float masking_area = mask.r;
	
	float uv_percentage = step(UV.x, amount);
	
	COLOR = vec4(MODULATE.rgb, uv_percentage * masking_area);
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/amount = 0.5

[node name="BatteryEntity" type="StaticBody2D" groups=["power_receivers", "power_sources"]]
position = Vector2( 200, 200 )
script = ExtResource( 4 )

[node name="PowerSource" type="Node" parent="."]
script = ExtResource( 2 )
power_amount = 200.0
output_direction = 4

[node name="PowerReceiver" type="Node" parent="."]
script = ExtResource( 3 )
power_required = 200.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 339, 119, 102, 82 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -50, 3, -50, 15, 0, 41, 50, 16, 50, 5, 0, -20 )

[node name="Indicator" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 2 )
position = Vector2( -23.5, -2.5 )
scale = Vector2( 0.65625, 0.621622 )
texture = ExtResource( 5 )

[connection signal="power_updated" from="PowerSource" to="." method="_on_PowerSource_power_updated"]
[connection signal="received_power" from="PowerReceiver" to="." method="_on_PowerReceiver_received_power"]
